--- a/index.html
+++ b/index.html
@@ -1,10 +1,135 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>My GitHub Page</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <p>This is my first GitHub Pages site.</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Smith-Wright</title>
+  <style>
+    /* ====== Global Styles ====== */
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      color: #333;
+      background-color: #f8f9fa;
+      line-height: 1.6;
+    }
+    header {
+      background: #00274d;
+      color: white;
+      padding: 1rem 2rem;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 1.8rem;
+    }
+    nav {
+      margin-top: 0.5rem;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin-right: 1.5rem;
+      font-weight: 500;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    .hero {
+      background: url('your-image.jpg') center/cover no-repeat;
+      color: white;
+      text-align: center;
+      padding: 6rem 2rem;
+    }
+    .hero h2 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+    .hero p {
+      font-size: 1.2rem;
+      max-width: 600px;
+      margin: 0 auto;
+    }
+    .container {
+      max-width: 1100px;
+      margin: auto;
+      padding: 2rem;
+    }
+    section {
+      margin-bottom: 3rem;
+    }
+    h2 {
+      color: #00274d;
+      margin-bottom: 1rem;
+    }
+    .card {
+      background: white;
+      padding: 1.5rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      margin-bottom: 1.5rem;
+    }
+    footer {
+      background: #00274d;
+      color: white;
+      text-align: center;
+      padding: 2rem;
+      margin-top: 3rem;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- ====== Header ====== -->
+  <header>
+    <h1>Smith-Wright</h1>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#team">Team</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <!-- ====== Hero Section ====== -->
+  <section class="hero">
+    <h2>Partners for the long term</h2>
+    <p>Hands on investor-operators focused on building businesses for the long term.</p>
+  </section>
+
+  <!-- ====== About Section ====== -->
+  <section id="about" class="container">
+    <h2>About Us</h2>
+    <div class="card">
+      <p>
+        At <strong>Smith-Wright</strong>, we are focused on acquiring a $1M+ EBITDA business. We prefer partnering with an owner or management team that will remain in place but are open to an appropriate tranisition period.
+      </p>
+    </div>
+  </section>
+
+   <!-- ====== Team Section ====== -->
+  <section id="team" class="container">
+    <h2>Our Team</h2>
+    <div class="card">
+      <h3>Colm Smith, CFA</h3>
+      <p>Partner — Partner at a Florida-based Multi-Family Office advising $7B of assets. Sold the business in 2024.</p>
+    </div>
+    <div class="card">
+      <h3>Zyad Wright</h3>
+      <p>Partner — Corporate attorney at Sullivan & Cromwell. Business and Operations lead for solar developer CWP Global.</p>
+    </div>
+  </section>
+
+  <!-- ====== Contact Section ====== -->
+  <section id="contact" class="container">
+    <h2>Contact Us</h2>
+    <div class="card">
+      <p>Email: <a href="mailto:info@firmname.com">info@firmname.com</a></p>
+    </div>
+  </section>
+
+  <!-- ====== Footer ====== -->
+  <footer>
+    <p>© 2025 Smith Global Holdings, LLC. All rights reserved.</p>
+  </footer>
+
+</body>
 </html>
