--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Smith-Wright</title>
+  <title>Wright-Smith</title>
   <style>
     /* ====== Global Styles ====== */
     body {
@@ -35,7 +35,7 @@
       text-decoration: underline;
     }
     .hero {
-      background: url('your-image.jpg') center/cover no-repeat;
+      background: url('logo.jpeg.jpeg') center/cover no-repeat;
       color: white;
       text-align: center;
       padding: 6rem 2rem;
@@ -81,7 +81,7 @@
 
   <!-- ====== Header ====== -->
   <header>
-    <h1>Smith-Wright</h1>
+    <h1>Wright-Smith</h1>
     <nav>
       <a href="#about">About</a>
       <a href="#team">Team</a>
