--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <h2>About Us</h2>
     <div class="card">
       <p>
-        At <strong>Smith-Wright</strong>, we are focused on acquiring a $1M+ EBITDA business. We prefer partnering with an owner or management team that will remain in place but are open to an appropriate tranisition period.
+        At <strong>Wright-Smith</strong>, we are focused on acquiring a $1M+ EBITDA business. We prefer partnering with an owner or management team that will remain in place but are open to an appropriate tranisition period.
       </p>
     </div>
   </section>
