--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <h2>Our Team</h2>
     <div class="card">
       <h3>Colm Smith, CFA</h3>
-      <p>Partner — Partner at a Florida-based Multi-Family Office advising $7B of assets. Sold the business in 2024.</p>
+      <p>Partner — Partner at a Florida-based Multi-Family Office advising multi-billion in assets. Sold the business in 2024.</p>
     </div>
     <div class="card">
       <h3>Zyad Wright</h3>
@@ -122,13 +122,13 @@
   <section id="contact" class="container">
     <h2>Contact Us</h2>
     <div class="card">
-      <p>Email: <a href="mailto:info@firmname.com">info@firmname.com</a></p>
+      <p>Email: <a href="mailto:colm@wright-smith.com">colm@wright-smith.com</a></p>
     </div>
   </section>
 
   <!-- ====== Footer ====== -->
   <footer>
-    <p>© 2025 Smith Global Holdings, LLC. All rights reserved.</p>
+    <p>All rights reserved.</p>
   </footer>
 
 </body>
