--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     }
     .hero {
       background: url('logo.jpeg.jpeg') center/cover no-repeat;
-      color: white;
+      color: black;
       text-align: center;
       padding: 6rem 2rem;
     }
@@ -100,7 +100,7 @@
     <h2>About Us</h2>
     <div class="card">
       <p>
-        At <strong>Wright-Smith</strong>, we are focused on acquiring a $1M+ EBITDA business. We prefer partnering with an owner or management team that will remain in place but are open to an appropriate tranisition period.
+        At <strong>Wright-Smith</strong>, we are focused on acquiring a $1M+ EBITDA business in the $10M-$50M EV range. We prefer partnering with an owner or management team that will remain in place but are open to an appropriate tranisition period.
       </p>
     </div>
   </section>
@@ -114,7 +114,7 @@
     </div>
     <div class="card">
       <h3>Zyad Wright</h3>
-      <p>Partner — Corporate attorney at Sullivan & Cromwell. Business and Operations lead for solar developer CWP Global.</p>
+      <p>Partner — Former Sullivan & Cromwell attorney and advisor to leading global companies and governments. Later Vice President serving on the Management Team at a global energy infrastructure developer (CWP Global) leading business/corporate development, operations and strategy, legal. </p>
     </div>
   </section>
 
